Aligned usernames in compact layout - fix

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -364,14 +364,15 @@ body, html
 	flex-shrink: 1;
 	flex-grow: 0;
 	font-size: 1em;
-	width: 5rem;
-	justify-content: flex-end;
 }
 
 .compact_layout .chat_uname_container
 {
 	display: flex;
 	flex-direction: row;
+	min-width: 5rem;
+	max-width: 5rem;
+	justify-content: flex-end;
 }
 
 .compact_layout .chat_uname_container
